// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add-assembly no load flag 1`] = `
{
  "code": undefined,
  "message": "Please specify the loading operation for this file with --load copy|symlink|move|inPlace",
  "oclif": {
    "exit": 110,
  },
  "skipOclifErrorHandling": undefined,
  "suggestions": undefined,
}
`;

exports[`fails if custom refNameAliases adapter has no type 1`] = `
{
  "code": undefined,
  "message": "No "type" specified in refNameAliases adapter "{}"",
  "oclif": {
    "exit": 150,
  },
  "skipOclifErrorHandling": undefined,
  "suggestions": undefined,
}
`;

exports[`fails if custom refNameAliases adapter has no type 2`] = `
{
  "code": undefined,
  "message": "No "type" specified in refNameAliases adapter "{}"",
  "oclif": {
    "exit": 150,
  },
  "skipOclifErrorHandling": undefined,
  "suggestions": undefined,
}
`;

exports[`fails if custom sequence adapter has no type 1`] = `
{
  "code": undefined,
  "message": "No "type" specified in sequence adapter "{}"",
  "oclif": {
    "exit": 140,
  },
  "skipOclifErrorHandling": undefined,
  "suggestions": undefined,
}
`;

exports[`fails if trying to add an assembly with a name that already exists 1`] = `
{
  "code": undefined,
  "message": "Cannot add assembly with name simple, an assembly with that name already exists",
  "oclif": {
    "exit": 160,
  },
  "skipOclifErrorHandling": undefined,
  "suggestions": undefined,
}
`;

exports[`fails if using inline JSON sequence custom with no --name 1`] = `
{
  "code": undefined,
  "message": "Must provide --name when using custom inline JSON sequence",
  "oclif": {
    "exit": 130,
  },
  "skipOclifErrorHandling": undefined,
  "suggestions": undefined,
}
`;
